src/objects/University__c.object
<CustomObject>
    <fields>
        <fullName>ACCOUNT_NAME__c</fullName>
        <label>Account Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCOUNT_NO__c</fullName>
        <label>Account No</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AttentionAddress__c</fullName>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AttentionName__c</fullName>
        <label>Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BANK_ADDRESS__c</fullName>
        <label>Bank Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BANK_NAME__c</fullName>
        <label>Bank Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bonus_Amount_2__c</fullName>
        <label>Bonus Amount 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bonus_Amount__c</fullName>
        <label>Bonus Amount 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bonus_Description_1__c</fullName>
        <label>Bonus Description 1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Bonus_Description_2__c</fullName>
        <label>Bonus Description 2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Commision_Rate_Type__c</fullName>
        <label>Commision Rate Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Percentage</fullName>
                </value>
                <value>
                    <fullName>Per Student</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Commision_Rate_Year_01__c</fullName>
        <label>Commission Rate Year 01</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Commision_Rate_Year_02__c</fullName>
        <label>Commission Rate Year 02</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Commission_Rate_Year_03__c</fullName>
        <label>Commission Rate Year 03</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Currency_Type__c</fullName>
        <label>University Currency Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AED</fullName>
                </value>
                <value>
                    <fullName>AFN</fullName>
                </value>
                <value>
                    <fullName>ALL</fullName>
                </value>
                <value>
                    <fullName>AMD</fullName>
                </value>
                <value>
                    <fullName>ANG</fullName>
                </value>
                <value>
                    <fullName>AOA</fullName>
                </value>
                <value>
                    <fullName>ARS</fullName>
                </value>
                <value>
                    <fullName>AUD</fullName>
                </value>
                <value>
                    <fullName>AWG</fullName>
                </value>
                <value>
                    <fullName>AZN</fullName>
                </value>
                <value>
                    <fullName>BAM</fullName>
                </value>
                <value>
                    <fullName>BBD</fullName>
                </value>
                <value>
                    <fullName>BDT</fullName>
                </value>
                <value>
                    <fullName>BGN</fullName>
                </value>
                <value>
                    <fullName>BHD</fullName>
                </value>
                <value>
                    <fullName>BIF</fullName>
                </value>
                <value>
                    <fullName>BMD</fullName>
                </value>
                <value>
                    <fullName>BND</fullName>
                </value>
                <value>
                    <fullName>BOB</fullName>
                </value>
                <value>
                    <fullName>BRL</fullName>
                </value>
                <value>
                    <fullName>BSD</fullName>
                </value>
                <value>
                    <fullName>BTN</fullName>
                </value>
                <value>
                    <fullName>BWP</fullName>
                </value>
                <value>
                    <fullName>BYN</fullName>
                </value>
                <value>
                    <fullName>BZD</fullName>
                </value>
                <value>
                    <fullName>CAD</fullName>
                </value>
                <value>
                    <fullName>CDF</fullName>
                </value>
                <value>
                    <fullName>CHF</fullName>
                </value>
                <value>
                    <fullName>CLP</fullName>
                </value>
                <value>
                    <fullName>CNY</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DoPaymentAfterVisa__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Payment After Visa</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsReady__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Students_Per_Bonus_Amount_2__c</fullName>
        <label>Number of Students Per Bonus Amount 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Students_Per_the_Bonus_Amount__c</fullName>
        <label>Number of Students Per Bonus Amount 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payment_Cycle__c</fullName>
        <label>Payment Cycle</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Annual</fullName>
                </value>
                <value>
                    <fullName>Bi-Annual</fullName>
                </value>
                <value>
                    <fullName>Tri Annual</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>1 month</fullName>
                    <isActive>false</isActive>
                    <label>1 month</label>
                </value>
                <value>
                    <fullName>10 months</fullName>
                    <isActive>false</isActive>
                    <label>10 months</label>
                </value>
                <value>
                    <fullName>11 months</fullName>
                    <isActive>false</isActive>
                    <label>11 months</label>
                </value>
                <value>
                    <fullName>12 months</fullName>
                    <isActive>false</isActive>
                    <label>12 months</label>
                </value>
                <value>
                    <fullName>2 months</fullName>
                    <isActive>false</isActive>
                    <label>2 months</label>
                </value>
                <value>
                    <fullName>3 months</fullName>
                    <isActive>false</isActive>
                    <label>3 months</label>
                </value>
                <value>
                    <fullName>4 months</fullName>
                    <isActive>false</isActive>
                    <label>4 months</label>
                </value>
                <value>
                    <fullName>5 months</fullName>
                    <isActive>false</isActive>
                    <label>5 months</label>
                </value>
                <value>
                    <fullName>6 months</fullName>
                    <isActive>false</isActive>
                    <label>6 months</label>
                </value>
                <value>
                    <fullName>7 months</fullName>
                    <isActive>false</isActive>
                    <label>7 months</label>
                </value>
                <value>
                    <fullName>8 months</fullName>
                    <isActive>false</isActive>
                    <label>8 months</label>
                </value>
                <value>
                    <fullName>9 months</fullName>
                    <isActive>false</isActive>
                    <label>9 months</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SWIFT_CODE__c</fullName>
        <label>Swift Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signature_the_stamp__c</fullName>
        <label>Signature &amp; the stamp</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>University_Address__c</fullName>
        <label>University Address</label>
        <type>TextArea</type>
    </fields>
    <label>University</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Commision_Rate_Type__c</columns>
        <columns>Commision_Rate_Year_01__c</columns>
        <columns>Bonus_Amount__c</columns>
        <columns>IsReady__c</columns>
        <columns>DoPaymentAfterVisa__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Australia_Kandy_University</fullName>
        <filterScope>Queue</filterScope>
        <label>Australia Kandy</label>
        <queue>Australia_Kandy</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Australia_University</fullName>
        <filterScope>Queue</filterScope>
        <label>Australia Colombo</label>
        <queue>Australia_Colombo</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Canada_Kandy_University</fullName>
        <filterScope>Queue</filterScope>
        <label>Canada Kandy</label>
        <queue>Canada_Kandy</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Canada_University</fullName>
        <filterScope>Queue</filterScope>
        <label>Canada Colombo</label>
        <queue>Canada_Colombo</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>England_University</fullName>
        <filterScope>Queue</filterScope>
        <label>UK Colombo</label>
        <queue>UK_Colombo</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>General_Queue_University</fullName>
        <filterScope>Queue</filterScope>
        <label>General Queue</label>
        <queue>General_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Germany_Colombo_University</fullName>
        <filterScope>Queue</filterScope>
        <label>Germany Colombo</label>
        <queue>Germany_Colombo</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Germany_Kandy_University</fullName>
        <filterScope>Queue</filterScope>
        <label>Germany Kandy</label>
        <queue>Germany_Kandy</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Grenada_University</fullName>
        <filterScope>Queue</filterScope>
        <label>Grenada</label>
        <queue>Grenada</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Malaysia_University</fullName>
        <filterScope>Queue</filterScope>
        <label>Malaysia</label>
        <queue>Malaysia</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>NZ_University</fullName>
        <filterScope>Queue</filterScope>
        <label>NZ</label>
        <queue>NZ</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Singapore_University</fullName>
        <filterScope>Queue</filterScope>
        <label>Singapore</label>
        <queue>Singapore</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>UK_Kandy_University</fullName>
        <filterScope>Queue</filterScope>
        <label>UK Kandy</label>
        <queue>UK_Kandy</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>USA_University</fullName>
        <filterScope>Queue</filterScope>
        <label>USA</label>
        <queue>USA</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>University Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Universities</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Commision_RateType_Percentage</fullName>
        <active>true</active>
        <description>Commision_RateType equlas Percentage Commission Rate Year 01,02,03 should not Exceed 100%</description>
        <errorConditionFormula>AND(
    TEXT(Commision_Rate_Type__c)= &quot;Percentage&quot;,
    OR(
        Commision_Rate_Year_01__c &gt; 100,
        Commision_Rate_Year_02__c &gt; 100, 
        Commission_Rate_Year_03__c &gt; 100
    )
    
)</errorConditionFormula>
        <errorMessage>Cannot Exceed More than 100%</errorMessage>
    </validationRules>
</CustomObject>